--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; url=templates/index.html">
-    <title>Comet Tracker</title>
 </head>
 <body>
     <p>Перенаправление на главную страницу...</p>
